--- a/TeamCode/build.release.gradle
+++ b/TeamCode/build.release.gradle
@@ -5,4 +5,9 @@ dependencies {
     implementation 'org.firstinspires.ftc:FtcCommon:6.1.1'
     implementation (name: 'tfod-release', ext:'aar')
     implementation (name: 'tensorflow-lite-0.0.0-nightly', ext:'aar')
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'com.acmerobotics.roadrunner:core:0.5.3'
+    implementation 'com.acmerobotics.dashboard:dashboard:0.3.10'
+    //Realsense T265 camera wrapper for FTC
+    implementation 'com.spartronics4915.lib:ftc265:2.1.8'
 }
